# labs_git

./: README.md  test.txt
.github/workflows/: cmake-lab2.yml
labs/lab1/: Makefile  input.txt
labs/lab1/src/: barrel.cpp  barrel.hpp  lab1.cpp  matrix.cpp  matrix.hpp  mystring.cpp  mystring.hpp  rect.cpp  rect.hpp  textwrapper.cpp  textwrapper.hpp
labs/lab1/tests/: test_bounding_rect.cpp  test_rect_basic_methods.cpp  test_rect_operations.cpp  test_rect_properties.cpp
labs/lab2/: CMakeLists.txt  Makefile
labs/lab2/data/: cat.rle  long_series.rle  test.b32  test_big.b32  test_dtor_rle.rle  test_ifile.b32  test_ifile.rle  test_rlef2.rle  test_rlefile2_random.rle
labs/lab2/src/: base32file.cpp  base32file.hpp  base32file2.cpp  base32file2.hpp  basefile.cpp  basefile.hpp  ifile.hpp  lab2.cpp  lab2.cpp:Zone.Identifier  mystring.cpp  mystring.hpp  rlefile.cpp  rlefile.hpp  rlefile2.cpp  rlefile2.hpp
labs/lab2/tests/: CMakeLists.txt  test_base32file.cpp  test_base32file2.cpp  test_basefile.cpp  test_composition.cpp  test_rlefile.cpp  test_rlefile2.cpp
reports/: lab1.md  lab2.md  lab3.md  lab5.md  lab6.md
курсовая/: problem_statement.md
